--- a/src/sass/blocks/_title.scss
+++ b/src/sass/blocks/_title.scss
@@ -12,9 +12,14 @@
         font-size: 14px;
         line-height: 21px;
     }
+    
     &_fz16{
         font-size: 16px;
         line-height: 24px;
+    }
+    &_fz20{
+        font-size: 20px;
+        line-height: 20px;
     }
     &_fz43{
         font-size: 43px;
