finish class worck

--- a/src/sass/blocks/_title.scss
+++ b/src/sass/blocks/_title.scss
@@ -24,6 +24,9 @@
     &_fz43{
         font-size: 43px;
     }
+    &_center{
+        text-align: center;
+    }
     &_white{
         color: $main_color1 ;
     }
