--- a/src/sass/blocks/_skill.scss
+++ b/src/sass/blocks/_skill.scss
@@ -10,7 +10,7 @@
         display: grid;
         grid-template-columns: 400px 670px;
         grid-template-rows: minmax(245px , auto) minmax(255px , auto) ;
-        grid-auto-rows: minmax(245px , auto);
+        grid-auto-rows: minmax(245px , auto) minmax(245px , auto);
         row-gap: 40px;
         column-gap: 70px;
     }
