--- a/src/sass/blocks/_media.scss
+++ b/src/sass/blocks/_media.scss
@@ -21,9 +21,7 @@
             column-gap: 22px;
             grid-template: repeat(2,minmax(115px,auto))/repeat(2,255px);
         }
-        &__skills-item{
-          
-        }
+      
     }
 
 }
@@ -33,7 +31,18 @@
     .container{
         max-width: 720px;
     }
-    
+
+    .skill{
+        &__wrapper{
+            grid-template-columns: 300px 380px;
+        }
+        &__photo{
+            grid-row: 1;
+        }
+        &__skills{
+            grid-column: 1;
+        }
+    }
 }
 
 
@@ -55,6 +64,20 @@
             width: 300px;
         }
     }
+    .skill{
+        &__photo{
+            img{
+                width: 50%;
+            }
+        }
+        padding-top: 50px;
+        &__wrapper{
+            grid-template: 405px auto auto/ 1fr;
+        }
+        &__skills{
+            column-gap: 20px;
+        }
+    }
     
 }
 
@@ -63,7 +86,7 @@
 
      .container{
         width: 100%;
-        padding: 0 10px;
+        padding: 0px 28px;
     }
     .title{
         &_fz43{
@@ -83,6 +106,23 @@
         min-height: 650px;
         &__btns{
             margin-top: 32px;
+        }
+    }
+    .skill{
+        padding-top: 25px;
+    
+        &__wrapper{
+            
+            grid-template: 450px auto auto/1fr;
+            grid-template-columns: 320px;
+        }
+        &__skills{
+            grid-template: unset;
+        }
+        &__photo {
+            img{
+                width: 100%;
+            }
         }
     }
 }
