--- a/src/sass/blocks/_portfolio.scss
+++ b/src/sass/blocks/_portfolio.scss
@@ -18,6 +18,8 @@
        transition: 0.6s all;
         img{
             width: 100%;
+            height: 100%;
+            object-fit: cover;
         }
         &:hover{
             transform: scale(1.05);
