--- a/src/sass/blocks/_price.scss
+++ b/src/sass/blocks/_price.scss
@@ -1,47 +1,49 @@
-.price{
-    padding-top: 120px ;
-    ul{
-        list-style: none;
+.price {
+    padding-top: 60px;
+    
+    
+    &__divider{
+        width: 60px;
+        height: 3px;
+        margin: 25px auto 0 auto;
+        background-color: $main_color;
     }
-    &__wrapper{
-        padding: 60px 50px 0 50px;
+    &__wrapper {
+        margin-top: 60px;
+        padding: 0 60px;
         display: grid;
-        grid-template-columns: 436px 436px;
-        column-gap: 180px;
+        grid-template: repeat(3, minmax(45px, auto)) / repeat(2, 365px);
+        grid-auto-rows: minmax(45px, auto);
+        row-gap: 15px;
+        justify-content: space-between;
     }
-    &__item-block{
-        display: grid;
-        grid-template: minmax(23px,auto) 50px / 330px 106px;
-            justify-content: space-between;
-            align-content: space-between;
-    }
-    .vertica{
-        grid-column: 1 / 3;
-    }
-    &__title{
-        font-size: 14px;
-        font-weight: 700;
-        line-height: 21px;
+    &__item {
         position: relative;
-        &::before{
+        display: grid;
+        grid-template: repeat(2, minmax(21px, auto)) / repeat(2, auto);
+        row-gap: 5px;
+        padding-left: 25px;
+        &:before {
             content: '';
-            position: absolute;
-            width: 20px;
-            height: 20px;
-            background: $main_color;
-            top: 3px;
-            left: -35px;
+            width: 15px;
+            height: 15px;
+            background-color: $main-color;
             border-radius: 100%;
+            position: absolute;
+            top: 5px;
         }
     }
-    &__prices{  
-        font-weight: 700;
+    &__type, &__count {
+        font-weight: bold;
         font-size: 14px;
         line-height: 21px;
     }
-    &__descr{
-        font-weight: 500;
-        font-size: 15px;
+    &__count {
+        justify-self: end;
+    }
+    &__descr {
+        grid-column: 1 / 3;
+        font-size: 12px;
         line-height: 18px;
     }
 }
